[package]
name = "rnlp"
version = "0.1.0"
edition = "2021"
description = "A natural language processing crate"
readme = "README.md"
repository = "https://github.com/AdemOdza/RNLP"
license = "LICENSE.txt"
keyword = ["NLP", "language processing", "natural language processing"]
categories = ["text-processing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
